--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
       </div>
     </header>
-    <div data-aos="fade-right" class="header__content">
+    <div class="header__content">
       <p class="header__content-subtitle">Made with nature</p>
       <h1 class="header__content-title">
         Welcome to the <br> world of nature <br> and organic.
@@ -144,8 +144,7 @@
         <p class="products__abovetitle">Organic</p>
         <h3 class="products__title">Our Products</h3>
         <div class="products__card">
-          <div data-aos="flip-down" data-aos-easing="ease-out-cubic"
-          data-aos-duration="1000" class="products__card-item">
+          <div class="products__card-item">
             <div class="products__card-name">Vegetable</div>
             <img class="products__card-images" src="./images/cards/card1.png" alt="">
             <div class="products__card-info">
@@ -165,8 +164,7 @@
               </div>
             </div>
           </div>
-          <div data-aos="flip-down" data-aos-easing="ease-out-cubic"
-          data-aos-duration="1000" class="products__card-item">
+          <div class="products__card-item">
             <div class="products__card-name">Vegetable</div>
             <img class="products__card-images" src="./images/cards/card2.png" alt="">
             <div class="products__card-info">
@@ -186,8 +184,7 @@
               </div>
             </div>
           </div>
-          <div data-aos="flip-down" data-aos-easing="ease-out-cubic"
-          data-aos-duration="1000" class="products__card-item">
+          <div class="products__card-item">
             <div class="products__card-name">Millets</div>
             <img class="products__card-images" src="./images/cards/card3.png" alt="">
             <div class="products__card-info">
@@ -207,8 +204,7 @@
               </div>
             </div>
           </div>
-          <div data-aos="flip-down" data-aos-easing="ease-out-cubic"
-          data-aos-duration="1000" class="products__card-item">
+          <div class="products__card-item">
             <div class="products__card-name">Vegetable</div>
             <img class="products__card-images" src="./images/cards/card4.png" alt="">
             <div class="products__card-info">
@@ -228,8 +224,7 @@
               </div>
             </div>
           </div>
-          <div data-aos="flip-down" data-aos-easing="ease-out-cubic"
-          data-aos-duration="1000" class="products__card-item">
+          <div class="products__card-item">
             <div class="products__card-name">Millets</div>
             <img class="products__card-images" src="./images/cards/card5.png" alt="">
             <div class="products__card-info">
@@ -249,8 +244,7 @@
               </div>
             </div>
           </div>
-          <div data-aos="flip-down" data-aos-easing="ease-out-cubic"
-          data-aos-duration="1000" class="products__card-item">
+          <div class="products__card-item">
             <div class="products__card-name">Millets</div>
             <img class="products__card-images" src="./images/cards/card6.png" alt="">
             <div class="products__card-info">
@@ -341,8 +335,7 @@
           </button>
         </div>
         <div class="selection__product-card">
-          <div data-aos="flip-down" data-aos-easing="ease-out-cubic"
-          data-aos-duration="1000" class="products__card-item selection__product-card__item">
+          <div class="products__card-item selection__product-card__item">
             <div class="products__card-name selection__product-name">Vegetable</div>
             <img class="products__card-images selection__product-images" src="./images/cards/card4.png" alt="">
             <div class="products__card-info selection__product-info">
@@ -362,8 +355,7 @@
               </div>
             </div>
           </div>
-          <div data-aos="flip-down" data-aos-easing="ease-out-cubic"
-          data-aos-duration="1000" class="products__card-item selection__product-card__item">
+          <div class="products__card-item selection__product-card__item">
             <div class="products__card-name selection__product-name">Vegetable</div>
             <img class="products__card-images selection__product-images" src="./images/cards/card5.png" alt="">
             <div class="products__card-info selection__product-info">
@@ -383,8 +375,7 @@
               </div>
             </div>
           </div>
-          <div data-aos="flip-down" data-aos-easing="ease-out-cubic"
-          data-aos-duration="1000" class="products__card-item selection__product-card__item">
+          <div class="products__card-item selection__product-card__item">
             <div class="products__card-name selection__product-name">Vegetable</div>
             <img class="products__card-images selection__product-images" src="./images/cards/card2.png" alt="">
             <div class="products__card-info selection__product-info">
@@ -412,8 +403,7 @@
     <section class="cultivation">
       <div class="container">
         <div class="cultivation__inner">
-          <div data-aos="fade-right" data-aos-offset="300"
-          data-aos-easing="ease-in-sine" class="cultivation__item">
+          <div class="cultivation__item">
             <p class="cultivation__item-abovetitle">Eco Friendly</p>
             <h3 class="cultivation__item-title">
               From our Farm <br>
@@ -562,8 +552,7 @@
           </a>
           <div class="popup__title">Product</div>
           <div class="popup__box">
-            <div data-aos="flip-down" data-aos-easing="ease-out-cubic"
-            data-aos-duration="1000" class="products__card-item">
+            <div class="products__card-item">
               <div class="products__card-name">Vegetable</div>
               <img class="products__card-images" src="./images/cards/card1.png" alt="">
               <div class="products__card-info">
@@ -666,7 +655,6 @@
       </div>
     </footer> 
 
-    <script src="./js/aos.js"></script>
     <script src="./js/main.js"></script>
 </body>
 
