--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <p class="products__abovetitle">Organic</p>
         <h3 class="products__title">Our Products</h3>
         <div class="products__card">
-          <div class="products__card-item">
+          <a href="#" class="products__card-item">
             <div class="products__card-name">Vegetable</div>
             <img class="products__card-images" src="./images/cards/card1.png" alt="">
             <div class="products__card-info">
@@ -163,8 +163,8 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="products__card-item">
+          </a>
+          <a href="" class="products__card-item">
             <div class="products__card-name">Vegetable</div>
             <img class="products__card-images" src="./images/cards/card2.png" alt="">
             <div class="products__card-info">
@@ -183,8 +183,8 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="products__card-item">
+          </a>
+          <a href="" class="products__card-item">
             <div class="products__card-name">Millets</div>
             <img class="products__card-images" src="./images/cards/card3.png" alt="">
             <div class="products__card-info">
@@ -203,8 +203,8 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="products__card-item">
+          </a>
+          <a href="" class="products__card-item">
             <div class="products__card-name">Vegetable</div>
             <img class="products__card-images" src="./images/cards/card4.png" alt="">
             <div class="products__card-info">
@@ -223,8 +223,8 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="products__card-item">
+          </a>
+          <a href="" class="products__card-item">
             <div class="products__card-name">Millets</div>
             <img class="products__card-images" src="./images/cards/card5.png" alt="">
             <div class="products__card-info">
@@ -243,8 +243,8 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="products__card-item">
+          </a>
+          <a href="" class="products__card-item">
             <div class="products__card-name">Millets</div>
             <img class="products__card-images" src="./images/cards/card6.png" alt="">
             <div class="products__card-info">
@@ -263,7 +263,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </a>
         </div>
       </div>
     </section>
